force-app/main/default/objects/WorkOrderPayment__c/WorkOrderPayment__c.object-meta.xml
<CustomObject>
    <label>Work Order Payment</label>
    <nameField>
        <displayFormat>WOP-{00000}</displayFormat>
        <label>Work Order Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Payment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>