force-app/main/default/objects/WorkOrderPayment__c/fields/EnrolledWithZelleAs__c.field-meta.xml
<CustomField>
    <fullName>EnrolledWithZelleAs__c</fullName>
    <label>Enrolled with Zelle as</label>
    <length>255</length>
    <type>Text</type>
</CustomField>