force-app/main/default/objects/WorkOrderPayment__c/fields/eTutorPaymentID__c.field-meta.xml
<CustomField>
    <fullName>eTutorPaymentID__c</fullName>
    <externalId>true</externalId>
    <label>eTutor Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>