force-app/main/default/objects/WorkOrderPayment__c/fields/eTutorSyncResponse__c.field-meta.xml
<CustomField>
    <fullName>eTutorSyncResponse__c</fullName>
    <label>eTutor Sync Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>