force-app/main/default/objects/WorkOrderPayment__c/fields/eTutorWorkOrderIDFormula__c.field-meta.xml
<CustomField>
    <fullName>eTutorWorkOrderIDFormula__c</fullName>
    <formula>WorkOrder__r.eTutorWorkOrderID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eTutorWorkOrderIDFormula</label>
    <type>Text</type>
</CustomField>