force-app/main/default/objects/WorkOrderPayment__c/fields/MainHandlerName__c.field-meta.xml
<CustomField>
    <fullName>MainHandlerName__c</fullName>
    <formula>WorkOrder__r.MainHandlerNameFormula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MainHandlerName</label>
    <type>Text</type>
</CustomField>