force-app/main/default/objects/WorkOrderPayment__c/fields/StudentEmail__c.field-meta.xml
<CustomField>
    <fullName>StudentEmail__c</fullName>
    <formula>WorkOrder__r.StudentEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StudentEmail</label>
    <type>Text</type>
</CustomField>