force-app/main/default/objects/WorkOrderPayment__c/fields/StudentName__c.field-meta.xml
<CustomField>
    <fullName>StudentName__c</fullName>
    <formula>WorkOrder__r.Student__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StudentName</label>
    <type>Text</type>
</CustomField>