force-app/main/default/objects/WorkOrderPayment__c/fields/StudentPhone__c.field-meta.xml
<CustomField>
    <fullName>StudentPhone__c</fullName>
    <formula>WorkOrder__r.StudentPhone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StudentPhone</label>
    <type>Text</type>
</CustomField>