force-app/main/default/objects/WorkOrderPayment__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder__c</referenceTo>
    <relationshipLabel>Work Order Payment</relationshipLabel>
    <relationshipName>Work_Order_Payment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>