force-app/main/default/objects/WorkOrderPayment__c/fields/WorkOrder_RecordType__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_RecordType__c</fullName>
    <formula>WorkOrder__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkOrder RecordType</label>
    <type>Text</type>
</CustomField>