force-app/main/default/objects/WorkOrderPayment__c/fields/WorkOrderName__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderName__c</fullName>
    <formula>WorkOrder__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkOrderName</label>
    <type>Text</type>
</CustomField>